--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "glob": "^9.3.5",
     "joi": "^18.0.2",
     "mongoose": "^9.1.5",
     "passport": "^0.7.0",
