--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "express": "^5.2.1",
     "glob": "^9.3.5",
     "joi": "^18.0.2",
     "moment-timezone": "^0.6.0",
